[package]

name = "capture"
version = "0.1.0"
authors = [ "loebel.marvin@gmail.com" ]


# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "A macro for adding explicit capture clauses to a (closure-) expression."

# These URLs point to more information about the repository
documentation = "http://rust-ci.org/Kimundi/capture.rs/doc/capture/"
repository = "https://github.com/Kimundi/capture.rs"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["macro", "capture", "closure", "clause"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# licenses. Multiple licenses can be separated with a `/`
license = "MIT"

[lib]

name = "capture"
